--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+mangum==0.17.0
 setuptools>=65.0.0
 pandas>=1.5.0,<2.0.0
 numpy>=1.24.0,<1.26.0
