--- a/vercel-python.json
+++ b/vercel-python.json
@@ -1,15 +1,20 @@
 {
   "version": 2,
+  "public": false,
   "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python"
-    },
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "frontend/dist"
+      }
+    },
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python",
+      "config": {
+        "pythonVersion": "3.11",
+        "maxLambdaSize": "250mb"
       }
     }
   ],
@@ -19,14 +24,30 @@
       "dest": "api/index.py"
     },
     {
+      "src": "/docs",
+      "dest": "api/index.py"
+    },
+    {
+      "src": "/openapi.json",
+      "dest": "api/index.py"
+    },
+    {
+      "src": "/health",
+      "dest": "api/index.py"
+    },
+    {
       "src": "/(.*)",
-      "dest": "frontend/dist/$1"
+      "dest": "frontend/dist/$1",
+      "status": 200
     }
   ],
   "env": {
+    "PYTHON_VERSION": "3.11.9",
     "DATABASE_URL": "@database_url",
     "SECRET_KEY": "@secret_key",
-    "CORS_ORIGINS": "@cors_origins"
+    "CORS_ORIGINS": "@cors_origins",
+    "UPLOAD_DIR": "@upload_dir",
+    "ACCESS_TOKEN_EXPIRE_MINUTES": "@access_token_expire_minutes"
   }
 }
 
